# irc.atl.chat

./: .dockerignore  .editorconfig  .gitattributes  .gitignore  .shfmt  .shfmt.yaml  Containerfile  Dockerfile  LICENSE  Makefile  README.md  cloudflare-credentials.ini.template  compose.yaml  compose.yml  docker-compose.yml  env.example  pyproject.toml
.github/: renovate.json5
.github/workflows/: ci.yml  cleanup.yml  deploy.yml  docker.yml  maintenance.yml  release.yml  security.yml
atheme/: Containerfile  Dockerfile  docker-entrypoint.sh
atheme/conf/: atheme.conf  atheme.conf.template
docs/: API.md  ATHEME.md  BACKUP_RECOVERY.md  CI_CD.md  CONFIG.md  DEVELOPMENT.md  DOCKER.md  GAMJA.md  MAKE.md  MODULES.md  MONITORING.md  README.md  SCRIPTS.md  SECRET_MANAGEMENT.md  SSL.md  TESTING.md  TODO.md  TROUBLESHOOTING.md  UNREALIRCD.md  USERMODES.md  WEBPANEL.md  user-modes.md
docs/examples/atheme/: atheme.conf.example
scripts/: build.sh  cert-monitor.sh  certbot-issue.sh  certbot-renew.sh  docker-entrypoint.sh  generate-oper-password.sh  health-check.sh  init.sh  prepare-config.sh  setup-environment.sh  setup-letsencrypt.sh  ssl-manager.sh  start-services.sh  start-webpanel.sh  test-ci.sh  test-setup.sh
scripts/certbot/: entrypoint.sh
services/atheme/: atheme-minimal.conf  atheme.conf  atheme.conf.template
services/atheme/default/: atheme.motd.example
src/backend/atheme/: Containerfile
src/backend/atheme/conf/: atheme.conf.template
src/backend/unrealircd/: Containerfile  README-third-party-modules.md  config.settings  docker-entrypoint.sh  third-party-modules.list
src/backend/unrealircd/conf/: modules.custom.conf  modules.optional.conf  modules.sources.list  rpc.modules.default.conf  unrealircd.conf.template
src/backend/unrealircd/conf/examples/: example.conf  example.es.conf  example.fr.conf  example.pt.conf  example.tr.conf
src/backend/unrealircd/scripts/: generate-oper-password.sh  install-modules.sh  manage-modules.sh  module-config.sh
src/frontend/gamja/: Containerfile
src/frontend/webpanel/: .dockerignore  Containerfile  README.md  nginx.conf
tests/: README.md  conftest.py  run_tests.py  test_environment_validation.py  test_irc_functionality.py
tests/controllers/: __init__.py  atheme_controller.py  base_controllers.py  unrealircd_controller.py
tests/e2e/: test_e2e_workflow.py
tests/fixtures/: irc_test_data.py  sample_data.py
tests/integration/: test_clients.py  test_configuration_validation.py  test_infrastructure.py  test_irc_client_integration.py  test_irc_functionality.py  test_irc_protocol.py  test_monitoring.py  test_performance.py  test_performance_load.py  test_protocol.py  test_pydle_client.py  test_pydle_ircv3.py  test_service_integration.py  test_services.py  test_ssl_management.py  test_unrealircd_monitoring.py  test_unrealircd_rpc.py  test_webpanel_integration.py
tests/irc_utils/: message_parser.py
tests/legacy/integration/: test_controller_pattern.py  test_docker_services.py  test_irc_client_integration.py  test_irc_libraries_comparison.py  test_irc_protocol.py  test_irctk_client.py  test_performance_load.py  test_pydle_client.py  test_scripts.py  test_service_integration.py  test_ssl_management.py  test_unrealircd_monitoring.py  test_unrealircd_rpc.py
tests/protocol/: test_messages.py
tests/unit/: test_configuration.py  test_docker_client.py  test_environment_validation.py  test_irc_server_mock.py
tests/utils/: base_test_cases.py  irc_test_client.py  runner.py  specifications.py  test_helpers.py
unrealircd/: Containerfile  Dockerfile  config.settings  docker-entrypoint.sh
unrealircd/conf/: dccallow.conf  modules.default.conf  rpc.modules.custom.conf  unrealircd.conf  unrealircd.conf.template
unrealircd/scripts/: generate-oper-password.sh  module-config.sh
web/gamja/: Containerfile  Dockerfile
web/webpanel/: .dockerignore  Containerfile  Dockerfile  README.md  config.php  nginx.conf
